bug fix page free demo overflow

--- a/_src/static/style/block/_forgot.scss
+++ b/_src/static/style/block/_forgot.scss
@@ -7,6 +7,7 @@
 	padding-bottom: 40px;
 
 	@media (max-width: $sm) {
+		min-height: 80vh;
 		padding-top: 25px;
 		padding-bottom: 25px;
 	}
