--- a/_src/static/style/block/form/_form.scss
+++ b/_src/static/style/block/form/_form.scss
@@ -1,6 +1,8 @@
 .form {
+	width: 100%;
 	max-width: 1130px;
 	margin: 0 auto;
+	overflow-x: hidden;
 
 	&__row {
 		display: flex;
